kubernetes/apps/agents/sensei/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sensei
  namespace: agents
spec:
  hostnames:
  - sensei.timcasa.me
  parentRefs:
  - name: envoy-internal
    namespace: network
  rules:
  - backendRefs:
    - name: sensei
      port: 8090
